fix firefox wrapping of record details name

--- a/src/search/views/RecordDetailsView.css
+++ b/src/search/views/RecordDetailsView.css
@@ -7,5 +7,5 @@
 }
 
 .record-details-title {
-  word-break: break-word;
+  overflow-wrap: break-word;
 }
